--- a/package.json
+++ b/package.json
@@ -39,6 +39,10 @@
     "recompose": "^0.12.0"
   },
   "devDependencies": {
-    "babel": "^5.8.34"
+    "babel": "^6.3.13",
+    "babel-cli": "^6.3.17",
+    "babel-preset-es2015": "^6.3.13",
+    "babel-preset-react": "^6.3.13",
+    "babel-preset-stage-0": "^6.3.13"
   }
 }
